--- a/code/question_generation.ipynb
+++ b/code/question_generation.ipynb
@@ -6186,6 +6186,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "infoAccessibilityQA_list & lieabilityQAs & justificationQAs 替换完成！\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def replace_data_by_set_id(\n",
+    "    path_original=\"/Users/liuyiwei/python/tactful-tom/dataset/Tactful_conv_set_0.json\",\n",
+    "    path_replacement=\"/Users/liuyiwei/python/tactful-tom/dataset/Tactful_conv_set_0-1.json\",\n",
+    "    path_output=\"/Users/liuyiwei/python/tactful-tom/dataset/Tactful_conv_set_0_updated.json\"\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    将 Tactful_conv_set_0-1.json 中的\n",
+    "    1. infoAccessibilityQA_list\n",
+    "    2. lieabilityQAs\n",
+    "    3. justificationQAs (或 justification_question 等自定义字段)\n",
+    "    通过 set_id 匹配，批量替换到 Tactful_conv_set_0.json 对应条目中\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 1. 读取原始数据\n",
+    "    with open(path_original, \"r\", encoding=\"utf-8\") as f:\n",
+    "        data_original = json.load(f)\n",
+    "\n",
+    "    # 2. 读取要替换的文件数据\n",
+    "    with open(path_replacement, \"r\", encoding=\"utf-8\") as f:\n",
+    "        data_replacement = json.load(f)\n",
+    "\n",
+    "    # 3. 分别建立三个映射字典\n",
+    "    #    {set_id: infoAccessibilityQA_list}、{set_id: lieabilityQAs}、{set_id: justificationQAs}\n",
+    "    infoAccessibility_map = {}\n",
+    "    lieability_map = {}\n",
+    "    justification_map = {}  # 用于存储 justificationQAs\n",
+    "\n",
+    "    for item in data_replacement:\n",
+    "        set_id = item.get(\"set_id\")\n",
+    "        if set_id is not None:\n",
+    "            # 如果有 infoAccessibilityQA_list，就放到 infoAccessibility_map\n",
+    "            if \"infoAccessibilityQA_list\" in item:\n",
+    "                infoAccessibility_map[set_id] = item[\"infoAccessibilityQA_list\"]\n",
+    "            # 如果有 lieabilityQAs，就放到 lieability_map\n",
+    "            if \"lieabilityQAs\" in item:\n",
+    "                lieability_map[set_id] = item[\"lieabilityQAs\"]\n",
+    "            # 如果有 justificationQAs，就放到 justification_map\n",
+    "            # (若你的字段名不同，如 \"justification_question\"，请对应修改)\n",
+    "            if \"justificationQAs\" in item:\n",
+    "                justification_map[set_id] = item[\"justificationQAs\"]\n",
+    "\n",
+    "    # 4. 遍历原始数据，根据 set_id 替换对应字段\n",
+    "    for item in data_original:\n",
+    "        set_id = item.get(\"set_id\")\n",
+    "        if set_id in infoAccessibility_map:\n",
+    "            item[\"infoAccessibilityQA_list\"] = infoAccessibility_map[set_id]\n",
+    "        if set_id in lieability_map:\n",
+    "            item[\"lieabilityQAs\"] = lieability_map[set_id]\n",
+    "        if set_id in justification_map:\n",
+    "            item[\"justificationQAs\"] = justification_map[set_id]\n",
+    "\n",
+    "    # 5. 将更新后的数据写入新的 JSON 文件\n",
+    "    with open(path_output, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(data_original, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    replace_data_by_set_id()\n",
+    "    print(\"infoAccessibilityQA_list & lieabilityQAs & justificationQAs 替换完成！\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
